[backend] integrate minio
